[gd_scene load_steps=26 format=2]

[ext_resource path="res://player3.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://player2.png" type="Texture" id=3]
[ext_resource path="res://player1.png" type="Texture" id=4]
[ext_resource path="res://player4.png" type="Texture" id=5]
[ext_resource path="res://harvest.wav" type="AudioStream" id=6]
[ext_resource path="res://player_death9.png" type="Texture" id=7]
[ext_resource path="res://player_death6.png" type="Texture" id=8]
[ext_resource path="res://player_death7.png" type="Texture" id=9]
[ext_resource path="res://player_death8.png" type="Texture" id=10]
[ext_resource path="res://player_death3.png" type="Texture" id=11]
[ext_resource path="res://player_death4.png" type="Texture" id=12]
[ext_resource path="res://player_death5.png" type="Texture" id=13]
[ext_resource path="res://player_death1.png" type="Texture" id=14]
[ext_resource path="res://player_death2.png" type="Texture" id=15]
[ext_resource path="res://player_death10.png" type="Texture" id=16]
[ext_resource path="res://player_death11.png" type="Texture" id=17]
[ext_resource path="res://player_death12.png" type="Texture" id=18]
[ext_resource path="res://player_death13.png" type="Texture" id=19]
[ext_resource path="res://player_dashing.png" type="Texture" id=20]
[ext_resource path="res://wops.wav" type="AudioStream" id=21]
[ext_resource path="res://shoot.wav" type="AudioStream" id=22]
[ext_resource path="res://dash.wav" type="AudioStream" id=23]

[sub_resource type="SpriteFrames" id=1]
resource_local_to_scene = true
animations = [ {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "dashing",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": false,
"name": "death",
"speed": 12.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 6.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 6.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.0
height = 0.0

[node name="Player" type="Area2D"]
z_index = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="HarvestSound" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 6 )
volume_db = 10.0
pitch_scale = 1.23

[node name="DashTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="BombTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="WopsSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 21 )

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 22 )

[node name="DashSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 23 )

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
